--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,3 +53,24 @@ footer div {
 footer a {
     color: #024e76;
 }
+section {
+    padding:60px;
+}
+/*Hero Style Start*/
+.hero {
+    background-image: url("../images/hero-bg.jpg");
+    height: 600px;
+    background-size:cover;
+    background-position:center;
+}
+/*Hero Style Ends*/
+/*Hero Form Style Start*/
+.hero-form {
+    color: #024e76;
+    background: #fce138;
+    padding: 20px;
+    width: 500px;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #024e76;
+}
