restyling what we do

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,7 @@ section {
 
 }
 /*Hero Form Style End*/
-/*what you do section start*/
+/*what we do section start*/
 .intro {
     text-align:center;
 }
@@ -127,4 +127,6 @@ section {
     font-size:20px;
     margin: 0 auto;
 }
+/*what we do section end*/
+/*what you do section start*/
 
