--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,3 +198,31 @@ trainer-bio p {
     line-height:1.3;
 }
 /*meet the trainers end*/
+/*reach out section starts*/
+.section-title {
+    font-size:55px;
+    display: inline-block;
+    padding: 0 100px 20px 100px;
+    border-bottom: 3px solid;
+    margin-bottom:35px;
+    color:#24e76;
+}
+.contact {
+    text-align: center;
+    background: #024e76;
+}
+.contact h2 {
+    color:#fce138;
+}
+.contact-info iframe{
+    width:400px;
+    height:400px;
+}
+.contact-info div{
+    display:inline-block;
+    text-align: left;
+    color:white;
+    width:410px;
+    vertical-align:top;
+    margin:30px 0 0 60px;
+}
