fixing html inheritance

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,14 +199,14 @@ trainer-bio p {
 }
 /*meet the trainers end*/
 /*reach out section starts*/
-.section-title {
+/*.section-title {
     font-size:55px;
     display: inline-block;
     padding: 0 100px 20px 100px;
     border-bottom: 3px solid;
     margin-bottom:35px;
     color:#024e76;
-}
+}*/
 .contact {
     text-align: center;
     background: #024e76;
