--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,49 +42,64 @@ header nav ul li a {
     font-weight: lighter;
     font-size: 1.55vw;
 }
+/*footer start*/
 footer {
+    display:flex;
+    justify-content: space-between;
+    flex-wrap:wrap;
     background: #fce138;
     width: 100%;
     padding: 40px 35px;
 }
-footer h2 {
-    display: inline;
+footer h2 {    
     color: #024e76;
     font-size: 30px;
     margin: 0;
 }
-footer div {
-    float: right;
+footer div {    
     line-height: 1.5;
     text-align: right;
 }
 footer a {
     color: #024e76;
 }
+/*footer end*/
 section {
     padding:60px;
 }
 /*Hero Style Start*/
 .hero {
     background-image: url("../images/hero-bg.jpg");
-    height: 600px;
+    display:flex;
     background-size:cover;
     background-position:center;
-    position:relative;
+    justify-content:center;
+    flex-wrap:wrap;
+}
+.hero-cta {
+    width:35%;
+    text-align:right;
+    margin:3.5%;
+    color:#fff;
+    font-size: 18px;
+    line-height:1.3;
+}
+.hero-cta h2 {
+    font-style:italic;
+    font-size: 55px;
+    color:#fce138;
+    font-weight:lighter;
 }
 /*Hero Style Ends*/
 /*Hero Form Style Start*/
 .hero-form {
     color: #024e76;
     background: #fce138;
-    padding: 20px;
-    width: 500px;
-    border-style: solid;
-    border-width: 3px;
+    padding: 20px;    
+    border-style: solid;    
     border-color: #024e76;
-    position: absolute;
-    bottom: 120px;
-    right:140px;
+    width:40%;
+    margin:3.5%;  
 }
 .hero-form p {
     margin: 5px 0 15px 0;
