--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,9 +133,10 @@ section {
 .section-title {
     font-size:55px;
     color:#024e76;
-    margin-bottom:35px;
-    padding:0 100px 20px 100px;
-    display: inline-block;
+    padding-bottom:20px;
+    text-align:center;
+    margin: 0 auto 35px auto;
+    width: 50%;    
     border-bottom:3px solid;
 }
 .primary-border {
@@ -149,16 +150,12 @@ section {
     text-align:center;
 }
 .intro p {
-    line-height:1.7;
-    color:#39a6b2;
-    width: 80%;
-    font-size:20px;
-    margin: 0 auto;
+    text-align:center;
 }
 /*what we do section end*/
 /*what you do section start*/
 .steps {
-    text-align: center;
+    
     background: #fce138;
 }
 .steps div {
@@ -183,7 +180,7 @@ section {
 /*what you do section end*/
 /*Meet the Trainers Start*/
 .trainers {
-    text-align: center;
+    
 }
 .trainer {
     width:900px;
@@ -206,6 +203,9 @@ section {
 }
 .text-right{
     text-align:right;
+}
+.flexrow{
+    display:flex;
 }
 .trainer-bio h3{
     font-size:32px;
@@ -231,7 +231,7 @@ trainer-bio p {
     color:#024e76;
 }*/
 .contact {
-    text-align: center;
+    
     background: #024e76;
 }
 .contact h2 {
