--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,16 +18,15 @@ header {
     background-color: var(--tertiary-color);
     display: flex;
     justify-content: space-between;
-    flex-wrap:wrap;
-    background-image:url("../images/hero-bg.jpg");
-    background-size:cover;
+    flex-wrap:wrap;    
     position: -webkit-sticky;
     position:sticky;
     top:0;
     background-position:center;
     background-attachment:fixed;
     background-position:80%;
-    top:0;
+    background-image:url("../images/hero-bg.jpg");
+    background-size:cover;
     z-index:9999;
 }
 header h1 {
@@ -49,24 +48,22 @@ header nav ul {
     flex-wrap:wrap;
     justify-content:space-between;
     align-items:center;
-    list-style:none;
-    text-shadow:0 0 10px rgba(0,0,0,0.5);
-}
-/*header nav ul li {
-    display: inline;
-}*/
-header nav ul li a:hover{
-    background: var(--primary-color);
-    color:var(--secondary-color);
-    border-radius:10px;
-    text-shadow:none;
+    list-style:none;    
 }
 header nav ul li a {
     padding:10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow:0 0 10px rgba(0,0,0,0.5);
+}
+header nav ul li a:hover{
+    background: var(--primary-color);
+    color:var(--secondary-color);
+    border-radius:15px;
+    text-shadow:none;
 }
 /*header end*/
+
 /*footer start*/
 footer {
     display:flex;
@@ -89,9 +86,12 @@ footer a {
     color: var(--secondary-color);
 }
 /*footer end*/
+
+/*style all tags*/
 section {
     padding:60px;
 }
+
 /*Hero Style Start*/
 .hero {
     background-image: url("../images/hero-bg.jpg");
@@ -101,6 +101,8 @@ section {
     justify-content:center;
     flex-wrap:wrap;
     align-items:flex-start;
+    background-attachment:fixed;
+    background-position:80%;
 }
 .hero-cta {
     width:35%;
@@ -120,11 +122,11 @@ section {
 /*Hero Style Ends*/
 /*Hero Form Style Start*/
 .hero-form {
-    color: #024e76;
+    color: var(--secondary-color);
     background: rgba(252,225,56,0.8);
     padding: 20px;    
     border-style: solid;    
-    border-color: #024e76;
+    border-color: var(--secondary-color);
     width:40%;
     margin:3.5%;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
@@ -248,8 +250,7 @@ section {
 }
 /*what we do section end*/
 /*what you do section start*/
-.steps {
-    
+.steps {    
     background: var(--primary-color);
 }
 .step {
@@ -269,9 +270,6 @@ section {
     font-size:46px;
     flex:1 30%;
 }
-/*.steps div {
-    margin-bottom:80px;
-}*/
 .step-img img {
     width:100%;    
 }
@@ -286,8 +284,7 @@ section {
     margin-right:20px;
 }
 .step-text {
-    flex:1 12%;
-    margin-right:20px;
+    flex:12;    
 }
 .step-text p {
     color:var(--tertiary-color);
@@ -298,9 +295,6 @@ section {
     line-height: 1.5;
     color: var(--secondary-color);
 }
-/*.steps span {
-    font-size:38px;
-}*/
 /*what you do section end*/
 /*Meet the Trainers Start*/
 .trainers {
@@ -319,8 +313,7 @@ section {
 .trainer img {
     width:100%;    
 }
-.trainer-bio {
-    padding:35px;    
+.trainer-bio {       
     padding:25px;
     line-height:1.3;
 }
@@ -333,24 +326,12 @@ section {
     font-size:22px;
     margin-bottom:15px;
 }
-trainer-bio p {
+.trainer-bio p {
     font-size:17px;
     
 }
 /*meet the trainers end*/
 /*reach out section starts*/
-/*.section-title {
-    font-size:55px;
-    display: inline-block;
-    padding: 0 100px 20px 100px;
-    border-bottom: 3px solid;
-    margin-bottom:35px;
-    color:var(--secondary-color);
-}*/
-.contact-info > * {
-    flex:1;
-    margin:15px;
-}
 .contact {    
     background: var(--secondary-color);
 }
@@ -362,8 +343,13 @@ trainer-bio p {
     justify-content:space-between;
     flex-wrap:wrap;
 }
+.contact-info > * {
+    flex:1;
+    margin:15px;
+}
 .contact-info iframe{    
     height:400px;
+    border-radius:15px
 }
 .contact-info div{    
     color:white;    
@@ -386,19 +372,20 @@ trainer-bio p {
     outline:none;
 }
 .contact-form input:focus, .contact-form textarea:focus{
-    color: rgba(2,78,118,0.75);
+    background-color: rgba(255,255,255,1);
     outline:none;
 }
 .contact-form input, .contact-form textarea {
-    border: 1px solid rgba(2,78,118,0.75);
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: rgba(2,78,118,0.75);
+    color: var(--secondary-color);
     width:100%;
     margin-bottom:15px;
     margin-top:5px;
     border-radius:10px;
+    background-color: rgba(255,255,255,0.75);
 }
 .contact-form button:hover{
     color:var(--primary-color);
@@ -422,7 +409,7 @@ trainer-bio p {
 .text-right{
     text-align:right;
 }
-.flexrow{
+.flex-row{
     display:flex;
 }
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
